@@ -1,3 +1,7 @@
+2006-11-24  Jürg Billeter  <j@bitron.ch>
+
+	* vala/valacodegenerator.vala: fix generating switch statements
+
 2006-11-23  Jürg Billeter  <j@bitron.ch>
 
 	* vala/valacodegenerator.vala: allow main methods without parameters and
